fixed alignment issues in Cart page in desktop

--- a/client/src/pages/cart/cart.css
+++ b/client/src/pages/cart/cart.css
@@ -80,7 +80,7 @@
     }
  }
 
- @media (min-width: 768px) { 
+ @media (min-width: 1024px) { 
     .mobile-cart-container {
         display: none;
     }
@@ -134,6 +134,16 @@
 
 
  /* ................. Desktop ....................... */
+
+ .desktop-cart-container {
+    display: none;
+ }
+
+ @media screen and (min-width: 1024px) {
+    .desktop-cart-container {
+        display: block;
+     }
+ }
 
  .my-cart-heading-flex-container {
     display: flex;
